testing/errors/test_variable_not_found.txts
IMPORT lib
REPLACE lib.x